--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background: #1D1D1D;
+      background: #000000;
       height: 300vh; /* enough scroll */
       display: flex;
       justify-content: center;
@@ -33,7 +33,7 @@
       position: relative;
       width: 500px;
       height: 180px;
-      background: #1D1D1D;
+      background: #000000;
       border: 2px solid #454545;
       border-radius: 0;
       box-shadow: none;
@@ -53,7 +53,7 @@
       transform: translateX(-50%);
       width: 500px;
       height: 180px;
-      background: #1D1D1D;
+      background: #000000;
       border: 2px solid #454545;
       border-radius: 0;
       box-shadow: none;
