--- a/index.html
+++ b/index.html
@@ -19,23 +19,23 @@
       flex-direction: column;
       margin-top: 600px;
     }
-.pair {
-  position: relative;
-  width: 1000px;
-  height: 180px;
-  overflow: visible;
-}
+    .pair {
+      position: relative;
+      width: 1000px;
+      height: 180px;
+      overflow: visible;
+    }
 
-.shader-card {
-  width: 500px;
-  height: 180px;
-  border: 2px solid #454545;
-  background: #000;
-  position: absolute;
-  top: 0;
-  left: 50%;
-  transform: translateX(-50%); /* center both cards at start */
-}
+    .shader-card {
+      width: 500px;
+      height: 180px;
+      border: 2px solid #454545;
+      background: #000;
+      position: absolute;
+      top: 0;
+      left: 50%;
+      transform: translateX(-50%); /* center both cards at start */
+    }
 
     canvas {
       width: 100%;
@@ -195,6 +195,11 @@
         } else {
           isHovering = false;
         }
+      });
+
+      // 🔹 Reset when leaving canvas
+      renderer.domElement.addEventListener("mouseleave", () => {
+        isHovering = false;
       });
 
       function animate(){
